--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5,15 +5,17 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
-# Ace (https://www.acemobile.fr/)
+# Ace or ACE France (www.acemobile.fr)
 Ace:
-  regex: 'BUZZ 1 (?:Lite|Plus)'
+  regex: '(?:BUZZ 1 (?:Lite|Plus)|BUZZ 2[ ]?(?:Lite|Plus?))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'BUZZ 1 Lite'
-      model: 'Buzz 1 Lite'
-    - regex: 'BUZZ 1 Plus'
-      model: 'Buzz 1 Plus'
+    - regex: 'BUZZ ([12]) Lite'
+      model: 'Buzz $1 Lite'
+    - regex: 'BUZZ ([12]) Plus'
+      model: 'Buzz $1 Plus'
+    - regex: 'BUZZ 2'
+      model: 'Buzz 2'
 
 'Tunisie Telecom':
   regex: 'StarTrail TT(?:[);/ ]|$)'
@@ -2318,7 +2320,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L5)|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE|Touchbook M7 Pro'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L5)|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE|Touchbook M7 Pro|DASH X PLUS'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L5)'
@@ -2347,6 +2349,8 @@ Blu:
       model: 'Energy X Plus'
     - regex: 'LIFE XL'
       model: 'Life XL'
+    - regex: 'DASH X PLUS'
+      model: 'Dash X Plus'
     - regex: 'Dash XL'
       model: 'Dash XL'
     - regex: 'PURE XL'
@@ -3396,7 +3400,7 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2)|Flare[ _](?:S Play|S5 Plus|S5|HD_MAX|LITE|XL Plus|X_V2)|Fusion Bolt|OMEGA HD 4'
+  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[4568]|X2)|Flare[ _](?:S Play|S5 Plus|S5|HD_MAX|LITE|XL Plus|X_V2|Y[67]_Pro|Y3s|Tab)|Fusion Bolt|OMEGA HD 4'
   device: 'smartphone'
   models:
     - regex: 'Cherry(?: ?Mobile)?[ _]?([^/;]+) Build'
@@ -3409,6 +3413,8 @@ Changhong:
       model: 'Flare Lite'
     - regex: 'Flare S Play'
       model: 'Flare S Play'
+    - regex: 'Flare_Y([67])_Pro'
+      model: 'Flare Y$1 Pro'
     - regex: 'Flare XL Plus'
       model: 'Flare XL Plus'
     - regex: 'Flare[ _]X[_ ]V2'
@@ -3431,11 +3437,11 @@ Changhong:
       model: 'Flare S6 Plus'
     - regex: 'FLARE S6 POWER'
       model: 'Flare S6 Power'
-    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2)'
+    - regex: 'Flare(?:[ _])?(4|A[13]|J[135]|P[13]|S[4568]|X2|Y3s)'
       model: 'Flare $1'
     - regex: 'OMEGA HD 4'
       model: 'Omega HD 4'
-    - regex: '(Fusion Bolt)'
+    - regex: '(Fusion Bolt|Flare Tab Pro|Flare Tab)'
       model: '$1'
       device: 'tablet'
 
@@ -4090,12 +4096,13 @@ Digicel:
 
 # Digiland
 Digiland:
-  regex: 'DL1008M'
-  device: 'smartphone'
+  regex: '(?:DL1008M|DL1023)(?:[);/ ]|$)'
+  device: 'tablet'
   models:
     - regex: 'DL1008M'
-      device: 'tablet'
       model: 'DL1008M'
+    - regex: 'DL1023'
+      model: 'DL1023'
 
 # Digma
 Digma:
@@ -15932,7 +15939,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[35] 2019-T|A6 MAX|A0622|X9)|Z3153V|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE V808|ZR01|ZTG01|K83CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE V808|ZR01|ZTG01|K83CA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -16148,6 +16155,8 @@ ZTE:
       model: 'Blade L8'
     - regex: 'Blade A3 2019-T(?:[);/ ]|$)'
       model: 'Blade A3 (2019)'
+    - regex: 'Blade A7 2019-T(?:[);/ ]|$)'
+      model: 'Blade A7 (2019)'
     - regex: 'Blade A5 2019-T(?:[);/ ]|$)'
       model: 'Blade A5 (2019)'
     - regex: 'BLADE A0622(?:[);/ ]|$)'
@@ -18645,6 +18654,22 @@ Altice:
    regex: 'Altice[ _](S62|S31|S43)(?:[);/ ]|$)'
    device: 'smartphone'
    model: '$1'
+
+# Kult
+Kult:
+  regex: '(Ambition|Beyond)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# BioRugged (biorugged.com)
+BioRugged:
+  regex: '(?:BioWolf 8-F30|BIOWOLF8F30|Ruggbo 20 Lite)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'BioWolf 8-F30|BIOWOLF8F30'
+      model: 'BioWolf 8-F30'
+    - regex: 'Ruggbo 20 Lite'
+      model: 'Ruggbo 20 Lite'
 
 # Leff
 Leff:
