--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -359,7 +359,7 @@
   name: 'iOS'
   version: '11.4.1'
 
-- regex: 'CFNetwork/902.*Darwin/17.6.0(?!.*x86_64)'
+- regex: 'CFNetwork/90[12].*Darwin/17.6.0(?!.*x86_64)'
   name: 'iOS'
   version: '11.4'
 
