--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1107,7 +1107,7 @@
     name: SeewoOS
     short_name: SEE
     version: 2.0.16.3558
-    platform: ""
+    platform: x64
 -
   user_agent: Mozilla/5.0 (Freebox; Linux i686) AppleWebKit/538.1 (KHTML, like Gecko) Navigateur web/1.0 Safari/538.1
   os:
