--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1378,3 +1378,10 @@
     short_name: MAC
     version: 10.15.2
     platform: x64
+-
+  user_agent: Safari/15608.5.11 CFNetwork/1121.1.2 Darwin/19.3.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.15.3
+    platform: x64
