--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -515,6 +515,10 @@
 ##########
 # Mac
 ##########
+- regex: 'CFNetwork/.+ Darwin/19.3.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.15.3'
+
 - regex: 'CFNetwork/.+ Darwin/19.2.0.*(x86_64)'
   name: 'Mac'
   version: '10.15.2'
