--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1398,3 +1398,9 @@
     name: Mac
     version: 10.15.5
     platform: x64
+-
+  user_agent: com.apple.Safari.SearchHelper/15609.3.5.1.3 CFNetwork/1128.0.1 Darwin/19.6.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.15.6
+    platform: x64
