--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -515,6 +515,10 @@
 ##########
 # Mac
 ##########
+- regex: 'CFNetwork/.+ Darwin/19.6.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.15.6'
+
 - regex: 'CFNetwork/.+ Darwin/19.5.0.*(x86_64)'
   name: 'Mac'
   version: '10.15.5'
