--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1396,23 +1396,34 @@
   user_agent: com.apple.Safari.SearchHelper/15609.2.9.1.2 CFNetwork/1126 Darwin/19.5.0 (x86_64)
   os:
     name: Mac
+    short_name: MAC
     version: 10.15.5
     platform: x64
 -
   user_agent: com.apple.Safari.SearchHelper/15609.3.5.1.3 CFNetwork/1128.0.1 Darwin/19.6.0 (x86_64)
   os:
     name: Mac
+    short_name: MAC
     version: 10.15.6
     platform: x64
 -
   user_agent: Safari/16610.1.21.1.2 CFNetwork/1195 Darwin/20.0.0 (x86_64)
   os:
     name: Mac
+    short_name: MAC
     version: "11.0"
     platform: x64
 -
   user_agent: Safari/16610.1.21.1.2 CFNetwork/1195 Darwin/20.1.0 (x86_64)
   os:
     name: Mac
+    short_name: MAC
     version: "11.0"
+    platform: x64
+-
+  user_agent: Safari/16610.1.21.1.2 CFNetwork/1195 Darwin/20.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "11.1"
     platform: x64
