--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -555,6 +555,10 @@
   name: 'Mac'
   version: '10.14'
 
+- regex: 'CFNetwork/.+ Darwin/17.7.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.13.6'
+
 - regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
   name: 'Mac'
   version: '10.13'
