--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -559,6 +559,10 @@
   name: 'Mac'
   version: '10.13.6'
 
+- regex: 'CFNetwork/.+ Darwin/17.6.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.13.5'
+
 - regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
   name: 'Mac'
   version: '10.13'
