--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -567,6 +567,10 @@
   name: 'Mac'
   version: '10.13.4'
 
+- regex: 'CFNetwork/.+ Darwin/17.4.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.13.3'
+
 - regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
   name: 'Mac'
   version: '10.13'
