--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -1207,3 +1207,21 @@
     model: X252
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: HONGYU61M_11C_HW (MRE/3.1.00(64);MAUI/_LD2409_WINMAX_BD45_180108;BDATE/2018/01/08 18:11;LCD/240320;CHIP/MT6261;KEY/Normal;TOUCH/0;CAMERA/1;SENSOR/0;DEV/HONGYU61M_11C_HW;WAP Browser/MAUI ();GMOBI/001;MBOUNCE/002;MOMAGIC/003;INDEX/004;SPICEI2I/005;GAMELOFT
+  os:
+    name: MRE
+    version: "3.1"
+    platform: ""
+  client:
+    type: browser
+    name: MAUI WAP Browser
+    version: ""
+    engine: ""
+    engine_version: ""
+  device:
+    type: feature phone
+    brand: Winmax
+    model: BD45
+  os_family: Real-time OS
+  browser_family: Unknown
