--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -504,11 +504,67 @@ TiPhone:
 
 # Apple
 Apple:
-  regex: '(?:iTunes-)?Apple[ _]?TV|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod'
+  regex: '(?:iTunes-)?Apple[ _]?TV|(?:Apple-|iTunes-)?(?<!like )(?:iPad|iPhone)|iPh[0-9],[0-9]|CFNetwork|HomePod|watchOS|Watch OS|Watch1,[12]'
   models:
     - regex: 'HomePod'
       device: 'smart speaker'
       model: 'HomePod'
+
+    - regex: 'Watch1,1'
+      device: 'wearable'
+      model: 'Watch 38mm'
+
+    - regex: 'Watch1,2'
+      device: 'wearable'
+      model: 'Watch 42mm'
+
+    - regex: 'Watch2,6'
+      device: 'wearable'
+      model: 'Watch Series 1 38mm'
+
+    - regex: 'Watch2,7'
+      device: 'wearable'
+      model: 'Watch Series 1 42mm'
+
+    - regex: 'Watch2,3'
+      device: 'wearable'
+      model: 'Watch Series 2 38mm'
+
+    - regex: 'Watch2,4'
+      device: 'wearable'
+      model: 'Watch Series 2 42mm'
+
+    - regex: 'Watch3,[13]'
+      device: 'wearable'
+      model: 'Watch Series 3 38mm'
+
+    - regex: 'Watch3,[24]'
+      device: 'wearable'
+      model: 'Watch Series 3 42mm'
+
+    - regex: 'Watch4,[13]'
+      device: 'wearable'
+      model: 'Watch Series 4 40mm'
+
+    - regex: 'Watch4,[24]'
+      device: 'wearable'
+      model: 'Watch Series 4 44mm'
+
+    - regex: 'Watch5,[13]'
+      device: 'wearable'
+      model: 'Watch Series 5 40mm'
+
+    - regex: 'Watch5,[24]'
+      device: 'wearable'
+      model: 'Watch Series 5 44mm'
+
+    - regex: 'Watch6,[13]'
+      device: 'wearable'
+      model: 'Watch Series 6 40mm'
+
+    - regex: 'Watch6,[24]'
+      device: 'wearable'
+      model: 'Watch Series 6 44mm'
 
     # specific smartphone devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,_]1'
