--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2759,3 +2759,11 @@
     version: ""
     engine: Trident
     engine_version: "7.0"
+-
+  user_agent: Mozilla/5.0 (X11; Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.108 Odin/74.3729.2.10 Safari/537.36 HbbTV/1.5.1 (+DRM; Hisense; 55U62QGAVT; V0000.01.00G.K1130; 55U62QGAVT; SmartTV_2021A;)
+  client:
+    type: browser
+    name: Odin
+    version: 74.3729.2.10
+    engine: Blink
+    engine_version: ""
