--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Odin (https://www.hisense.com/)
+- regex: 'Odin/(?:(\d+[\.\d]+))'
+  name: 'Odin'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 #Seraphic Sraf (https://www.seraphic-corp.com/)
 - regex: 'Sraf(?:[/ ](\d+[\.\d]+))?'
   name: 'Seraphic Sraf'
